--- a/src/Movie.css
+++ b/src/Movie.css
@@ -99,7 +99,7 @@ div.single_column {
 section.images {
   text-align: center;
   color: #000;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
@@ -137,7 +137,7 @@ section.poster_wraper {
   --primaryColorContrast: #ffffff;
   text-align: center;
   color: #000;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
 }
@@ -180,7 +180,7 @@ div.poster {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
@@ -224,7 +224,7 @@ div.image_content {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
@@ -287,7 +287,7 @@ img.poster {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   border: 0;
@@ -331,7 +331,7 @@ div.header_poster_wrapper {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
@@ -369,7 +369,7 @@ section.header {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   display: flex;
@@ -410,7 +410,7 @@ div.title.ott_true {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   unicode-bidi: isolate;
@@ -451,7 +451,7 @@ div.auto.actions {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   margin: 0;
@@ -496,7 +496,7 @@ div.header_info {
   --numberOfPosterColumns: 2;
   --primaryColor: rgba(31.5, 31.5, 52.5, 1);
   --primaryColorContrast: #ffffff;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 1em;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
